WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111003
REGRESSION (48533): Full-frame plugins stopped working (download instead of loading the plugin)
https://bugs.webkit.org/show_bug.cgi?id=111003
Summary
REGRESSION (48533): Full-frame plugins stopped working (download instead of l...
Jer Noble
Reported
2013-02-27 12:19:48 PST
REGRESSION (48533): Full-frame plugins stopped working (download instead of loading the plugin)
Attachments
Patch
(3.83 KB, patch)
2013-02-27 12:21 PST
,
Jer Noble
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-02-27 12:21:31 PST
Created
attachment 190575
[details]
Patch
Anders Carlsson
Comment 2
2013-02-27 12:33:38 PST
Comment on
attachment 190575
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190575&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:3794 > + if (PluginData* pluginData = m_page->pluginData()) { > + if (pluginData->supportsMimeType(MIMEType) && m_page->settings()->arePluginsEnabled()) > + return true; > + }
I think you want to check if plug-ins are enabled before calling pluginData, since that can be a sync call out to the web process.
Jer Noble
Comment 3
2013-02-27 12:36:34 PST
(In reply to
comment #2
)
> (From update of
attachment 190575
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=190575&action=review
> > > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:3794 > > + if (PluginData* pluginData = m_page->pluginData()) { > > + if (pluginData->supportsMimeType(MIMEType) && m_page->settings()->arePluginsEnabled()) > > + return true; > > + } > > I think you want to check if plug-ins are enabled before calling pluginData, since that can be a sync call out to the web process.
This should be covered by the line: if (!mainFrame()->loader()->subframeLoader()->allowPlugins(NotAboutToInstantiatePlugin)) In Page::pluginData(), which calls settings->arePluginsEnabled(), but allows the client to override the setting. Thanks!
Jer Noble
Comment 4
2013-02-27 12:46:40 PST
Committed
r144228
: <
http://trac.webkit.org/changeset/144228
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug