REGRESSION (48533): Full-frame plugins stopped working (download instead of loading the plugin) https://bugs.webkit.org/show_bug.cgi?id=111003

Reviewed by Anders Carlsson.

Also query the Page's pluginData when determining whether a given MIME type can be shown.

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageCanShowMIMEType):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::canShowMIMEType):
* WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/129316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144228 268f45cc-cd09-0410-ab3c-d52691b4dbfc